myapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nidhi-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: djangodeployment
        image: nidhisharma28/nidhi-test
        ports:
        - containerPort: 8000
